docs: GRA-140 — post-mortem M2 + README Koreos POC validated
- docs/koreos/postmortem-m2.md : bilan M2 complet (surprises techniques,
  ce qui a bien marché, décisions à revoir pour M3, métriques)
- README.md : titre + badge "M2 POC Validated", section Koreos avec
  démo rapide, stack technique, modules et liens docs

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>