@@ -1,10 +1,10 @@
-# 🚀 Project Template - Kotlin Multiplatform (KMP)
+# poc-koreos — Kotlin Native Window + wgpu4k (AppKit/macOS)
 
 [![Kotlin](https://img.shields.io/badge/Kotlin-2.3.21-purple?logo=kotlin)](https://kotlinlang.org)
 [![Gradle](https://img.shields.io/badge/Gradle-9.5.0-blue?logo=gradle)](https://gradle.org)
-[![AGP](https://img.shields.io/badge/AGP-9.0.0-green?logo=android)](https://developer.android.com/studio/releases/gradle-plugin)
 [![Java](https://img.shields.io/badge/Java-25-red?logo=openjdk)](https://openjdk.org)
 [![CI/CD](https://img.shields.io/badge/CI%2FCD-GitHub%20Actions-blue?logo=github-actions)](https://github.com/features/actions)
+[![M2 POC: Validated](https://img.shields.io/badge/M2%20POC-Validated%20%E2%9C%85-brightgreen?style=for-the-badge)](docs/koreos/postmortem-m2.md)
 
 <!-- ==========================================
      BADGES DE STATUT DE PROJET PERSONNALISABLES
@@ -25,6 +25,44 @@
 
 <!-- STATUT : ARCHIVÉ (ARCHIVED) -->
 <!-- [![Projet: Archived](https://img.shields.io/badge/Statut-Archived-lightgrey?style=for-the-badge)](https://github.com) -->
+
+---
+
+## Koreos — POC M2 validé
+
+**Koreos** est un moteur de fenêtrage Kotlin natif pour macOS (AppKit) utilisant exclusivement **Panama FFM** (zéro JNA/Rococoa) pour les bindings natifs, et **wgpu4k** pour le rendu GPU via Metal.
+
+### Démo rapide
+
+```bash
+# Prérequis : macOS + JDK 25
+./gradlew :samples:hello-triangle:run
+```
+
+→ Ouvre une fenêtre avec un triangle RGB tournant à ~60 fps. Redimensionnable. Fermeture propre via ⌘W.
+
+### Stack technique
+
+| Couche | Technologie |
+|--------|------------|
+| Fenêtrage | AppKit (NSWindow, NSView) via Panama FFM |
+| Event loop | CFRunLoop (kCFRunLoopBeforeWaiting observer) |
+| GPU | wgpu4k 0.1.1 (Metal backend) |
+| Shaders | WGSL inline |
+| JDK | 25 (`--enable-native-access=ALL-UNNAMED`) |
+
+### Modules
+
+- **`:koreos-core`** — interfaces pures Kotlin (`EventLoop`, `Window`, `ApplicationHandler`, `WindowEvent`)
+- **`:koreos-appkit`** — implémentation AppKit/macOS via Panama FFM
+- **`:koreos`** — façade publique (`expect`/`actual`)
+- **`:samples:hello-triangle`** — démo M2 : triangle RGB + resize
+
+### Documentation
+
+- [Specs](docs/koreos/specs.md) — contrats d'interface
+- [Plan de développement](docs/koreos/plan.md) — jalons M1→M3
+- [Post-mortem M2](docs/koreos/postmortem-m2.md) — bilan technique, apprentissages, métriques
 
 ---
 
